--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,8 +8,12 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
-
+    strategy:
+     matrix:
+      os: [ubuntu-latest, windows-letest]
+      version: [14, 16, 18]
+    runs-on: ${{matrix.os}} 
+ 
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
@@ -17,7 +21,7 @@ jobs:
     - name: Setup Node.js
       uses: actions/setup-node@v3
       with:
-        node-version: '18'
+        node-version: ${{matrix.version}}
 
     - name: Install dependencies
       run: npm install
